# mcp_remote

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  rules.json
